# task-manager-backend

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_migration.py  056e0d735fe1_add_items_table.py  c2a2e886dd4f_add_priority_to_tasks.py
app/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: items.py  llm.py  tasks.py  users.py
