[project]
name = "task-manager-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "chromadb>=1.1.0",
    "fastapi>=0.118.0",
    "flake8>=7.3.0",
    "hypercorn>=0.17.3",
    "ollama>=0.6.0",
    "passlib==1.7.4",
    "pydantic-settings>=2.11.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.43",
]
